6.0.0 (01-03-2021)
- New Fixture: Payment plans for debit entries

5.3.3 (31-01-2021)
- Refactor: Added messages translation used by 3D Secure address select page (jsp) 

5.3.2 (13-11-2020)
- Refactor: Replace usage of deprecated method Degree.getExecutionDegrees(AcademicInterval)

5.3.1 (16-09-2020)
- Bug Fix: If there are not debit entries to process in creation debt generation rule, throw exception to abort transaction and prevent tuitions being created

5.3.0 (13-09-2020)
- Bug fix: Prevent exception in generating tuition when zip code does not exist

5.2.4 (07-09-2020)
- Bug fix: Improve debt report request processing, to improve memory usage

5.2.3 (14-08-2020)
- Bug Fix: Filter correctly tuition payment plans

5.2.2 (27-07-2020)
- Bug Fix: Fix error of payment plan copies with no fixed due date set

5.2.1 (14-07-2020)
- Refactor: Disable excludeifMatches for now to evaluate if it is necessary

5.2.0 (14-07-2020)
- New Fixture: Support multiple restrictions in academic debt generation rule

5.1.1 (08-07-2020)
- Bug Fix: On copy tuition payment plans, set correct dates in installments regarding the new execution interval

5.1.0 (07-07-2020)
- New Fixture: Copy academic debt generation rules between execution intervals
- New Fixture: Copy tuition payment plans between execution intervals
- Refactor: Retrieve student's statutes in execution year by his registration

5.0.4 (25-05-2020)
- Refactor: Method to retrieve all academic debt generation rule entries of tuition type

5.0.3 (13-05-2020)
- Bug Fix: Portuguese translation in labels
- Refactor: Listener to detect when FinantialEntity is deleted in order to disconect relations
- Bug Fix: Fix AcademicDebtGenerationRule edition in fields of minimum amount to generate payment reference code

5.0.2 (07-05-2020)
- Bug Fix: fix typos in bundles

5.0.1 (05-05-2020)
- Improvement: Force creation of tuitions with the academic debt generation rules

5.0.0 (24-04-2020)