@@ -1,3 +1,5 @@
+- Refactor: Builder class to create academic treasury target debts
+
 6.0.0 (01-03-2021)
 - New Fixture: Payment plans for debit entries
 
